visual layout to prevent overlapping

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -37,5 +37,6 @@ body {
 
 .container-fluid {
   height: 100%;
+  padding-top: 40px;
 }
 
